<resources>
    <string name="app_name">Google Book</string>
    <string name="title_activity_bookshelf">BookshelfActivity</string>
    <string name="find_a_book">Find a Book:</string>
    <string name="bookName">Book Name</string>
    <string name="book_review">Book Review</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="toast">Name: %1$s / Value: %2$s</string>
    <string name="read">Read</string>
    <string name="read_book">Read Book</string>
    <string name="book_title">Book Title</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="view_books">View Books</string>
    <string name="add_a_book">Add a Book</string>
    <string name="book_id">Book Id</string>
    <string name="url">image</string>
    <string name="save_book">Save Book</string>
    <string name="add_book">Add Book</string>
    <string name="view_bookshelves">View Bookshelves</string>
    <string name="book_category">Book Category</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
</resources>
